--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,5 +1,4 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
+# This workflow will build and test an Xcode project
 
 name: Swift
 
@@ -11,12 +10,15 @@ on:
 
 jobs:
   build:
-
     runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer
+    - name: Install dependencies
+      run: xcodebuild -resolvePackageDependencies
     - name: Build
-      run: swift build -v
+      run: xcodebuild build -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest'
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest'
