--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Install dependencies
       run: xcodebuild -resolvePackageDependencies
     - name: Build
-      run: xcodebuild build -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest'
+      run: xcodebuild build -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' CODE_SIGNING_ALLOWED=NO
     - name: Run tests
       run: xcodebuild test -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest'
