--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,4 +21,5 @@ jobs:
     - name: Build
       run: xcodebuild build -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' CODE_SIGNING_ALLOWED=NO
     - name: Run tests
-      run: xcodebuild test -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest'
+      run: xcodebuild test -scheme DoughToBread -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' CODE_SIGNING_ALLOWED=NO
+
